# guidebot

./: README.md
guidebot_bringup/: CMakeLists.txt  package.xml
guidebot_bringup/env-hooks/: 25.guidebot.sh.em
guidebot_bringup/launch/: concert_client.launch  concert_client.old
guidebot_bringup/param/: capability_providers.yaml  preferred_default.yaml  preferred_rapp.yaml  preferred_rapp_mapping.yaml
guidebot_capabilities/: CMakeLists.txt  package.xml
guidebot_capabilities/interfaces/: Navigation2D.yaml
guidebot_capabilities/providers/: amcl_navigation.yaml  cartographer_navigation.yaml  diagnostics.yaml  differential_mobile_base.yaml  robot_state_publisher.yaml
guidebot_capabilities/providers/config/: guidebot_analyzers.yaml
guidebot_capabilities/providers/launch/: amcl_navigation.launch.xml  cartographer_navigation.launch.xml  diagnostics.launch.xml  differential_mobile_base.launch.xml  robot_state_publisher.launch.xml
guidebot_control/: CMakeLists.txt  package.xml
guidebot_control/config/: diff_drive_controller.yaml  holonomic_controller.yaml
guidebot_control/launch/: base_controller.launch  diff_drive_controllers.launch  holonomic_controllers.launch
guidebot_control/nodes/: holonomic_controller
guidebot_description/: CMakeLists.txt
guidebot_description/launch/: show_robot.launch
guidebot_description/robots/: diff_drive.xacro  holonomic.xacro
guidebot_description/rviz/: show_robot.rviz
guidebot_description/urdf/: plugins.gazebo.xacro
guidebot_gazebo/: CMakeLists.txt  package.xml
guidebot_gazebo/launch/: concert_client.launch  simulation.launch
guidebot_gazebo/nodes/: fake_diagnostics
guidebot_gazebo/test/: example.py
guidebot_navigation/: CMakeLists.txt  linefollow_plugin.xml  package.xml
guidebot_navigation/config/: cartographer_sweep.lua  cartographer_sweep_imu.lua
guidebot_navigation/config/base/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
guidebot_navigation/config/base/diff_drive/navigation/: costmap_common_params.yaml
guidebot_navigation/config/base/holonomic/follow_line/: dwa_local_planner_params.yaml
guidebot_navigation/config/base/holonomic/navigation/: move_base_params.yaml
guidebot_navigation/config/base2/: dwa_local_planner_params.yaml  global_costmap_params.yaml
guidebot_navigation/include/linefollow_planner/: linefollow_planner.h
guidebot_navigation/launch/: cartographer.launch.xml  cartographer_sweep.launch  cartographer_sweep_imu.launch  joystick_teleop.launch  move_base.launch  test_cartographer.launch
guidebot_navigation/nodes/: fake_odom_broadcaster  joystick_teleop  nosetests.json  path_from_points  path_from_points_test.py
guidebot_navigation/rviz/: show_navigation.rviz
guidebot_navigation/src/: linefollow_planner.cpp
guidebot_navigation/test/: nosetests.json  other_test.py  path_from_points.test  path_from_points_test.py  test_test.py
guidebot_rapps/: CMakeLists.txt  package.xml
guidebot_rapps/rapps/exploration/: exploration.launch  exploration.rapp
guidebot_rapps/rapps/waypoint_navigation/: waypoint_navigation.launch  waypoint_navigation.rapp
(+19 files in other folders)
