<?xml version="1.0"?>
<package format="2">
  <name>guidebot_bringup</name>
  <version>0.0.0</version>
  <description>The guidebot_bringup package</description>

  <maintainer email="samuellindgren91@gmail.com">Samuel Lindgren</maintainer>


  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>rocon_app_manager</depend>
  <depend>rosbridge_server</depend>

  <export>

  </export>
</package>
