<?xml version="1.0"?>
<package format="2">
  <name>guidebot_gazebo</name>
  <version>0.0.0</version>
  <description>The guidebot_gazebo package</description>

  <maintainer email="samuellindgren91@gmail.com">Samuel Lindgren</maintainer>


  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>guidebot_description</depend>

  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>
  <depend>control_toolbox</depend>

  <export>

  </export>
</package>
