<?xml version="1.0"?>
<package format="2">
  <name>guidebot_navigation</name>
  <version>0.0.0</version>
  <description>The guidebot_navigation package</description>

  <maintainer email="samuellindgren91@gmail.com">Samuel Lindgren</maintainer>


  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>tf</depend>
  <depend>cartographer_ros</depend>
  <depend>move_base</depend>
  <depend>dwa_local_planner</depend>

  <export>

  </export>
</package>
